# xenstore-sys

./: Cargo.toml  build.rs  rustfmt.toml
.github/actions/setup-xen/: action.yml
.github/workflows/: ci.yml
src/: lib.rs  manual_bindings.rs
