[package]
name = "xenstore-sys"
version = "0.1.1"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
links = "xenstore"
repository = "https://github.com/Wenzel/xenstore-sys"
readme = "README.md"
keywords = ["xen"]
categories = ["external-ffi-bindings"]
description = "Rust bindings for Xenstore"
license = "GPL-3.0-only"
licence-file = "LICENSE"

[dependencies]

[build-dependencies]
bindgen = { version = "0.49.3", optional = true }

[features]
default = ["bindgen"]   # Bindings will be generated automatically by bindgen
manual = []             # Bindings will be generated manually